force-app/main/default/objects/DealerMarketingVehicleRules__c/DealerMarketingVehicleRules__c.object-meta.xml
<CustomObject>
    <description>Junction between Dealer and Makes that a defines a set of makes that a dealer is allowed to market to</description>
    <label>Dealer Marketing Vehicle Rule</label>
    <nameField>
        <displayFormat>DMVR{0000000}</displayFormat>
        <label>Dealer Marketing Vehicle Rules Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Marketing Vehicle Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>