force-app/main/default/objects/DealerMarketingVehicleRules__c/fields/Activator_VehicleConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Activator_VehicleConfigurationId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Vehicle Configuration record in the Activator System</inlineHelpText>
    <label>Activator Vehicle Configuration Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>