force-app/main/default/objects/DealerMarketingVehicleRules__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>A dealer the OEM is associated with</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Dealer_Marketing_Makes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>