force-app/main/default/objects/DealerMarketingVehicleRules__c/fields/Is_Include__c.field-meta.xml
<CustomField>
    <fullName>Is_Include__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether this Make should be Included for marketing</inlineHelpText>
    <label>Is Included</label>
    <type>Checkbox</type>
</CustomField>