force-app/main/default/objects/DealerMarketingVehicleRules__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Make that the associated Dealer can market to</inlineHelpText>
    <label>Make</label>
    <referenceTo>Makes__c</referenceTo>
    <relationshipName>Dealer_Marketing_Makes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>