force-app/main/default/objects/DealerMarketingVehicleRules__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Model of Vehicle Marketed to</inlineHelpText>
    <label>Model</label>
    <referenceTo>Models__c</referenceTo>
    <relationshipLabel>Dealer Marketing Vehicle Rules</relationshipLabel>
    <relationshipName>Dealer_Marketing_Vehicle_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>