force-app/main/default/objects/DealerMarketingVehicleRules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealer__c</columns>
    <columns>Make__c</columns>
    <columns>Make_Name__c</columns>
    <columns>Model__c</columns>
    <columns>Scope__c</columns>
    <columns>Is_Include__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>